# polyphot

./: README.md  flux2sfr.py  grow_measure.py  img2profile.py  mask_galex.py  mask_image_regions.py  polygon2flux.py  pyproject.toml  radial_profile.py
.github/workflows/: pypi_release.yml
docs/source/: conf.py  index.rst  install.rst
documentation/: demo_ic342.odg
src/polyphot/: __init__.py  grow_measure.py  img2profile.py  polygon2flux.py  polyphot.py
