[build-system]
requires = [
    "setuptools>=64.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "polyphot"
version = "0.1.1"

authors = [
  { name="Ralf Kotulla", email="ralf.kotulla@gmail.com" },
]
description = "Extract photometry from arbitrarily-shaped polygons"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The 3-Clause BSD License (BSD-3-Clause)",
    "Operating System :: OS Independent",
]

dependencies = [
    "astropy",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/rkotulla/polyphot"
"Bug Tracker" = "https://github.com/rkotulla/polyphot/issues"

[project.scripts]
polyphot = "polyphot.polyphot:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]





[tool.poetry]
name='polyphot'
version = "0.0.1"
description = "Extract photometry from arbitrarily-shaped polygons"
readme = "README.md"
license = "BSD-3-Clause"
authors = [ "Ralf Kotulla <ralf.kotulla@gmail.com>" ]

#license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "polyphot", from ='src' }
]

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^6.1.1"
scipy = "^1.14.0"

[tool.poetry.scripts]
polyphot = "polyphot.polyphot:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
#style = 'pep440'


